--- a/.github/workflows/code_health.yml
+++ b/.github/workflows/code_health.yml
@@ -1,10 +1,10 @@
 on:
   pull_request:
     branches:
-    - main 
+      - main
   push:
     branches:
-    - main
+      - main
 
 name: Source Code Health
 
@@ -12,32 +12,39 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: '20.11.0'
-        cache: 'npm'
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "20.11.0"
+          cache: "npm"
 
-    - name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Lint
-      run: npm run lint
+      - name: Lint
+        run: npm run lint
 
-    - name: Test
-      run: npm run test:coverage
+      - name: Test
+        run: npm run test:coverage
 
-    - name: Build
-      run: npm run build
+      - name: Build
+        run: npm run build
+      - name: Check msg
+        run: |
+          msg="${{ github.event.commits[0].message  }}"
+          if [[ ! $msg =~ ^.*:\ .*$  ]]; then
+            echo "Bad message "
+            exit 1
+          fi
 
-    - name: Check dist directory
-      run: |
-        FILES=$(git status -s dist/)
-        if [ -n "$FILES" ]; then
-          echo "You need to include the changes in the dist folder, execute: npm run build and commit the changes in the dist folder"
-          echo "Uncommitted files:"
-          echo "$FILES"
-          echo "Diff content:"
-          git diff dist/
-          exit 1
-        fi
+      - name: Check dist directory
+        run: |
+          FILES=$(git status -s dist/)
+          if [ -n "$FILES" ]; then
+            echo "You need to include the changes in the dist folder, execute: npm run build and commit the changes in the dist folder"
+            echo "Uncommitted files:"
+            echo "$FILES"
+            echo "Diff content:"
+            git diff dist/
+            exit 1
+          fi
